hphp/test/zend/bad/ext-standard-strings/bug54055.php
<?php
for($i = 495; $i <= 1074; $i++) {
  ini_set('precision', $i);
  echo "$i: len=", strlen(strval(-1 * pow(2, -1074))), "\n";
}